re PR preprocessor/38987 (Including a precompiled header from another header causes invalid assembly to be generated)

2009-09-22  Richard Guenther  <rguenther@suse.de>

	PR pch/38987
	* files.c (pch_open_file): Disallow non-toplevel PCH inclusion.

From-SVN: r151970